[package]
name = "dcbor"
version = "0.15.2"
edition = "2021"
description = "Deterministic CBOR (\"dCBOR\") for Rust."
authors = ["Blockchain Commons"]
keywords = ["encoding", "cbor", "binary", "format", "serialization"]
repository = "https://github.com/BlockchainCommons/bc-dcbor-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
categories = ["data-structures", "encoding", "no-std"]
documentation = "https://docs.rs/dcbor"

[dependencies]
chrono = { version = "^0.4.28", default-features = true  }
half = { version = "=2.2.1", default-features = false }
hex = { version = "^0.4.3", default-features = true }
anyhow = { version = "^1.0.0", default-features = false }
hashbrown = { version = "^0.14.3", optional = true }
thiserror-no-std = { version = "^2.0.2", optional = true }
thiserror = { version = "^1.0.58", optional = true }
unicode-normalization = { version = "^0.1.22", default-features = false }

[dev-dependencies]
indoc = "^2.0.0"
version-sync = "^0.9.0"
hex-literal = "^0.4.1"

[features]
default = ["std"]
std = ["half/std", "chrono/std", "hex/std", "anyhow/std", "thiserror"]
no_std = ["hashbrown", "thiserror-no-std"]
multithreaded = []
