[package]
name = "dcbor"
version = "0.24.0"
edition = "2024"
description = "Deterministic CBOR (\"dCBOR\") for Rust."
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/bc-dcbor-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
documentation = "https://docs.rs/dcbor"
keywords = [
    "encoding",
    "cbor",
    "binary",
    "format",
    "serialization",
] # Up to five
categories = [
    "data-structures",
    "encoding",
    "no-std",
] # https://crates.io/category_slugs

[dependencies]
chrono = { version = "^0.4.28", default-features = true }
half = { version = "^2.4.1", default-features = false }
hashbrown = { version = "^0.16.1", optional = true }
hex = { version = "^0.4.3", default-features = true }
spin = { version = "0.10.0", optional = true }
thiserror = { version = "^2.0", default-features = false, optional = true }
unicode-normalization = { version = "^0.1.22", default-features = false }
paste = "^1.0.12"

[dev-dependencies]
hex-literal = "^1.1.0"
indoc = "^2.0.0"
version-sync = "^0.9.0"

[features]
default = ["std"]
multithreaded = []
no_std = ["hashbrown", "thiserror", "spin"]
std = ["half/std", "chrono/std", "hex/std", "thiserror/std"]
